<resources>
    <string name="app_name">Circular training</string>
    <string name="text_instruction">Complete the exercise,\nthen click \"COMPLETE\"</string>
    <string name="format_timer" translatable="false">%2d:%02d</string>
    <string name="format_timer_sek" translatable="false">%d</string>
    <string name="attempt">Done:</string>
    <string name="done">complete</string>
    <string name="end_relax">complete the break</string>
    <string name="test_timer_text" translatable="false">00:00</string>
    <string name="break_text">Break:</string>
    <string name="button_start">start</string>
    <string name="number_of_circles">Total round:</string>
    <string name="time_break">Break time:</string>
    <string name="time_default_min" translatable="false">00</string>
    <string name="time_default_sek" translatable="false">60</string>
    <string name="time_delimiter" translatable="false">:</string>
    <string name="attempt_default" translatable="false">5</string>
    <string name="toast_fail">Enter the correct data!</string>
    <string name="work">WORK:</string>
    <string name="notify_text_">Complete set!</string>
    <string name="notify_title">REST:</string>

    <string name="dialog_button_continue">continue</string>
    <string name="dialog_button_complete">complete</string>
    <string name="dialog_exit_title">Attention!</string>
    <string name="dialog_exit_description">Do you really want to complete and exit?</string>
    <string name="dialog_end_title">Congratulations!</string>
    <string name="dialog_end_description">You did it!\nContinue or complete?</string>

    <array name="autosize_text_sizes">
        <item>10sp</item>
        <item>12sp</item>
        <item>20sp</item>
        <item>40sp</item>
        <item>100sp</item>
        <item>130sp</item>
        <item>160sp</item>
        <item>180sp</item>
        <item>200sp</item>
        <item>250sp</item>
        <item>300sp</item>
        <item>350sp</item>
        <item>400sp</item>

    </array>


</resources>
