<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.TrainingActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutCount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutRelax"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewCounterLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/all_margin"
            android:gravity="center"
            android:text="@string/attempt"
            android:textSize="@dimen/text_size_attempt_label"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@id/textViewCounter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewCounter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/count_work"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/counter_text_size"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCounterLabel" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/textViewWork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_instruction"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toTopOf="@+id/buttonEndAttempt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintLayoutCount" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutRelax"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/buttonEndAttempt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutCount">

        <TextView
            android:id="@+id/textViewLabelTimer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/break_text"
            android:textSize="@dimen/text_size_attempt_label"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@id/textViewTimer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewTimer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/all_margin"
            android:gravity="center"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/text_size_timer"
            android:visibility="visible"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLabelTimer"
            tools:text="@string/test_timer_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/buttonEndAttempt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/all_margin"
        android:layout_marginTop="@dimen/button_margin_top"
        android:background="@drawable/oval_button"
        android:onClick="endAttempt"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:text="@string/done"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="@dimen/button_text_size"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutRelax" />

    <Button
        android:id="@+id/buttonEndRelax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/all_margin"
        android:layout_marginTop="@dimen/button_margin_top"

        android:background="@drawable/oval_button"

        android:onClick="endRelax"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"

        android:text="@string/end_relax"
        android:textColor="@color/colorPrimaryLight"

        android:textSize="@dimen/button_text_size"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutRelax" />


</androidx.constraintlayout.widget.ConstraintLayout>
